--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,7 +39,5 @@ jobs:
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2
       with:
-        # Artifact name
-        name: apk
-        # A file, directory or wildcard pattern that describes what to upload
-        path: artifacts/*.apk
+        name: app-release.apk
+        path: android/app/build/outputs/apk/release/
